syntax = "proto3";

option java_package = "com.apivideo.grpc";
option java_outer_classname = "UsersProto";
option objc_class_prefix = "AVP";

package users;

// The request message for user details.
message UserRequest {
  int32 user_id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
}

// The response message containing the user details.
message UserResponse {
  int32 user_id = 1;
  string username = 2;
  string email = 3;
  string message = 4;
}

// The response message containing the token for login.
message UserLoginResponse {
  string token = 1;
  string message = 2;
}

// The user service definition.
service UserService {
  // Registers a new user
  rpc RegisterUser (UserRequest) returns (UserResponse);

  // Logs in a user
  rpc LoginUser (UserRequest) returns (UserLoginResponse);

  // Retrieves user info
  rpc GetUserInfo (UserRequest) returns (UserResponse);
}
